--- a/views/pages/customerBilling.ejs
+++ b/views/pages/customerBilling.ejs
@@ -191,7 +191,7 @@ const rows = [
                                     <div class="row">
                                       <tr>
                                         <td style="padding: 0 !important;" ><%-row.title%></td>
-                                        <td style="padding: 0 !important;" >$<%-pricing[row.key].toFixed(2)%></td>
+                                        <td style="padding: 0 !important;" >$<%- pricing[row.key] %></td>
                                       </tr>
                                     </div>
                                       <%}%>
