--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -242,7 +242,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/reports/')) { %> active <% } %>">
 				
-					<a href="/customer/report/package-report">
+					<a href="/customer/report/package-report?search_type=100">
 						<i class="fas fa-list"></i>
 						<p>Packages</p>
 					</a>
