--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -257,7 +257,7 @@
 				
 					<a href="/customer/report/package-report?search_type=100">
 						<i class="fas fa-list"></i>
-						<p id="packagesclick">Packages -</p>
+						<p id="packagesclick">Packages</p>
 					</a>
 		
 				</li>
