--- a/views/pages/customerBilling.ejs
+++ b/views/pages/customerBilling.ejs
@@ -81,6 +81,7 @@
                 <td>
                   <%= pkg.shipperName %>
                 </td>
+                <% console.log(pkg.lastStatusText) %>
                 <td>
                     <%- pkg.pricing.TotalWeightValue %>
                 </td>
